@@ -1,8 +1,10 @@
 DIST Perl-Critic-1.082.tar.gz 337920 RMD160 dd771c2e122bdf0f528fb27e24e21182e4e2c735 SHA1 fb4ec8df3038896d1134ef5c1c082d096c9e5675 SHA256 31610fe25863ea3de63d73cea73759a502e31c12ffdbec23bf4c72f7f8b9684e
 DIST Perl-Critic-1.098.tar.gz 425245 RMD160 f550f603588ee4dff32e96ef990c4b82e834932c SHA1 8ccb7cfc8529808ea74bce82ed80e6677f09ca17 SHA256 0a6f31202427994756c531d1f20ec592d3385e024ebd0f8a1258057be64671fc
 DIST Perl-Critic-1.100.tar.gz 533699 RMD160 4edf110d3f250292d226ba3f1aa720b6f70d3a60 SHA1 4022934daa7c7859e17a2bb244c9f6365fac2538 SHA256 873f260f318a006b512708ca91510657c52b9fee7ef2d724cfc2b4b39491956d
+DIST Perl-Critic-1.104.tar.gz 564530 RMD160 242e2d5078e1f220ffe1d2a1a90667b1a49b4b72 SHA1 b8e9869802448e7d88d2e4c3b9211ebe34ddff5d SHA256 7717941492189b9298b952fc3a0e2783614fe1e87e7e13b8721e249474cc5d9c
 EBUILD Perl-Critic-1.082.ebuild 961 RMD160 999cf22167057f7189287f21fbf6030f0117a849 SHA1 09105b621bb621ee8f89f180a2fd706c69ed6ee1 SHA256 c727fc8eba5fb75fccbbbc6d3b9187b232631466e685a12d1be6526622068e68
 EBUILD Perl-Critic-1.098.ebuild 1027 RMD160 a8a3c73ba9b4f7395e32d6de8a103bac5c4ceb1c SHA1 18a8a1b53cedd50ee7c0d859bf53f2de573a21e5 SHA256 e6eb30857518e00eccee67115d69c736a2c05c48e9ea071857506068abaa17ab
 EBUILD Perl-Critic-1.100.ebuild 1027 RMD160 05dfbc2f93f0300a4547744947bff8d2d7f23dbf SHA1 a9ba84e2fc38e500b1c9833cd2e76dfb98fcd1d3 SHA256 3f0153774c11f8e5949d13daba0219ba1cc2db8aaa47d813e5a0738973529ae7
-MISC ChangeLog 7305 RMD160 ca81a80435550e734c60e24adc5fb363ca9f3fa1 SHA1 f122b735a33fb0a278d9b84509e637797dd1529c SHA256 03594f06ba09a7db0ba338e8d7438874344bd7116e71f6fba1cd90f7bf7995b6
+EBUILD Perl-Critic-1.104.ebuild 1051 RMD160 89fc40fef7662f9a9eb5f0134dfd9a731ac4a86d SHA1 22e0d3b2b100e81d06b11934f8391b21ff311701 SHA256 c4a21daec4a1a572d28e5fddafe5f5a5fb956fb217e51482eb7c597b1e92a48c
+MISC ChangeLog 7473 RMD160 aa053043d4500e75ca41d6c6c0486d7c75535e87 SHA1 67350b1c260a4e7aea4e9cd291e03e41582bb12a SHA256 aae66dd47ffb222abecae5978c49da1d6268298f124878aa29b613215de42543
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
