@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Perl-Critic
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Perl-Critic/ChangeLog,v 1.54 2009/07/18 08:41:52 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Perl-Critic/ChangeLog,v 1.55 2009/08/25 18:04:35 robbat2 Exp $
+
+*Perl-Critic-1.104 (25 Aug 2009)
+
+  25 Aug 2009; Robin H. Johnson <robbat2@gentoo.org>
+  +Perl-Critic-1.104.ebuild:
+  Version bump via perl-bump experimental tool.
 
 *Perl-Critic-1.100 (18 Jul 2009)
 
